--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -9,12 +9,13 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="7">Default suite</th></tr>
-<tr><td><a href="#t0">Default test</a></td><td class="num">3</td><td class="num">0</td><td class="num">0</td><td class="num">52,108</td><td></td><td></td></tr>
+<tr><td><a href="#t0">Default test</a></td><td class="num">4</td><td class="num">0</td><td class="num">0</td><td class="num">15,932</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="3">kovair.JenkinsIntegration1.JenkinsIntegrationTestNGClass</td><td><a href="#m0">NGTest1</a></td><td rowspan="1">1560251848644</td><td rowspan="1">13</td></tr><tr class="passedeven"><td><a href="#m1">NGTest2</a></td><td rowspan="1">1560251848668</td><td rowspan="1">2</td></tr><tr class="passedeven"><td><a href="#m2">NGTest3</a></td><td rowspan="1">1560251848673</td><td rowspan="1">7</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="4">kovair.JenkinsIntegration1.JenkinsIntegrationTestNGClass</td><td><a href="#m0">NGTest1</a></td><td rowspan="1">1560253276439</td><td rowspan="1">13</td></tr><tr class="passedeven"><td><a href="#m1">NGTest2</a></td><td rowspan="1">1560253276462</td><td rowspan="1">3</td></tr><tr class="passedeven"><td><a href="#m2">NGTest3</a></td><td rowspan="1">1560253276468</td><td rowspan="1">3</td></tr><tr class="passedeven"><td><a href="#m3">NGTest4</a></td><td rowspan="1">1560253276473</td><td rowspan="1">2</td></tr></tbody>
 </table>
 <h2>Default test</h2><h3 id="m0">kovair.JenkinsIntegration1.JenkinsIntegrationTestNGClass#NGTest1</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 <h3 id="m1">kovair.JenkinsIntegration1.JenkinsIntegrationTestNGClass#NGTest2</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 <h3 id="m2">kovair.JenkinsIntegration1.JenkinsIntegrationTestNGClass#NGTest3</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m3">kovair.JenkinsIntegration1.JenkinsIntegrationTestNGClass#NGTest4</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
