--- a/test-output/index.html
+++ b/test-output/index.html
@@ -49,7 +49,7 @@
               <ul>
                 <li>
                   <a href="#" class="navigator-link " panel-name="test-xml-Default_suite">
-                    <span>C:\Users\prasenjitd.IN\AppData\Local\Temp\testng-eclipse--391402897\testng-customsuite.xml</span>
+                    <span>C:\Users\prasenjitd.IN\AppData\Local\Temp\testng-eclipse--1584764814\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -91,7 +91,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">3 methods,   3 passed</span>
+                    <span class="method-stats">4 methods,   4 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -113,6 +113,11 @@
                       <span>
                         <img width="3%" src="passed.png"/>
                         <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="kovair.JenkinsIntegration1.JenkinsIntegrationTestNGClass" hash-for-method="NGTest3">NGTest3</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img width="3%" src="passed.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="kovair.JenkinsIntegration1.JenkinsIntegrationTestNGClass" hash-for-method="NGTest4">NGTest4</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -154,12 +159,19 @@
                   <span class="method-name">NGTest3</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="NGTest4">
+                  </a> <!-- NGTest4 -->
+                  <span class="method-name">NGTest4</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
           </div> <!-- suite-Default_suite-class-passed -->
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\prasenjitd.IN\AppData\Local\Temp\testng-eclipse--391402897\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\prasenjitd.IN\AppData\Local\Temp\testng-eclipse--1584764814\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -208,7 +220,7 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(3);
+data.addRows(4);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'NGTest1')
 data.setCell(0, 2, 'kovair.JenkinsIntegration1.JenkinsIntegrationTestNGClass')
@@ -216,16 +228,20 @@ data.setCell(0, 3, 13);
 data.setCell(1, 0, 1)
 data.setCell(1, 1, 'NGTest3')
 data.setCell(1, 2, 'kovair.JenkinsIntegration1.JenkinsIntegrationTestNGClass')
-data.setCell(1, 3, 7);
+data.setCell(1, 3, 3);
 data.setCell(2, 0, 2)
 data.setCell(2, 1, 'NGTest2')
 data.setCell(2, 2, 'kovair.JenkinsIntegration1.JenkinsIntegrationTestNGClass')
-data.setCell(2, 3, 2);
+data.setCell(2, 3, 3);
+data.setCell(3, 0, 3)
+data.setCell(3, 1, 'NGTest4')
+data.setCell(3, 2, 'kovair.JenkinsIntegration1.JenkinsIntegrationTestNGClass')
+data.setCell(3, 3, 2);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 22 ms</span>
+              <span class="suite-total-time">Total running time: 21 ms</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -258,31 +274,39 @@ return data;
               </div> <!-- configuration-test before -->
               <div class="test-method">
                 <span class="method-name">NGTest1</span>
-                <span class="method-start">50728 ms</span>
+                <span class="method-start">14788 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">AfterMethod([TestResult name=NGTest1 status=SUCCESS method=JenkinsIntegrationTestNGClass.NGTest1()[pri:0, instan...)</span>
-                <span class="method-start">50743 ms</span>
+                <span class="method-start">14803 ms</span>
               </div> <!-- configuration-method after -->
               <div class="test-method">
                 <span class="method-name">NGTest2</span>
-                <span class="method-start">50752 ms</span>
+                <span class="method-start">14811 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">AfterMethod([TestResult name=NGTest2 status=SUCCESS method=JenkinsIntegrationTestNGClass.NGTest2()[pri:0, instan...)</span>
-                <span class="method-start">50756 ms</span>
+                <span class="method-start">14816 ms</span>
               </div> <!-- configuration-method after -->
               <div class="test-method">
                 <span class="method-name">NGTest3</span>
-                <span class="method-start">50757 ms</span>
+                <span class="method-start">14817 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">AfterMethod([TestResult name=NGTest3 status=SUCCESS method=JenkinsIntegrationTestNGClass.NGTest3()[pri:0, instan...)</span>
-                <span class="method-start">50768 ms</span>
+                <span class="method-start">14821 ms</span>
+              </div> <!-- configuration-method after -->
+              <div class="test-method">
+                <span class="method-name">NGTest4</span>
+                <span class="method-start">14822 ms</span>
+              </div> <!-- test-method -->
+              <div class="configuration-method after">
+                <span class="method-name">AfterMethod([TestResult name=NGTest4 status=SUCCESS method=JenkinsIntegrationTestNGClass.NGTest4()[pri:0, instan...)</span>
+                <span class="method-start">14827 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-test after">
                 <span class="method-name">AfterTest</span>
-                <span class="method-start">50772 ms</span>
+                <span class="method-start">14830 ms</span>
               </div> <!-- configuration-test after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
